[workspace]
resolver = "3"
members = [
    "rebound",
    "bind",
    "examples/*",
]
default-members = ["rebound", "bind"]

[workspace.package]
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
thiserror = "2"

bindgen = "0.72.1"
cc = "1"

rebound = { path = "./rebound" }
rebound-bind = { version = "=4.6.0", path = "./bind" }
