[package]
name = "rebound-rs"
version = "4.6.0-alpha.1"
edition = "2024"
license = "GPL-3.0"
description = "Rust wrapper for the REBOUND N-body simulation library."
repository = "https://github.com/Cosmic-Stars-Team/rebound-rs"
homepage = "https://github.com/Cosmic-Stars-Team/rebound-rs"
documentation = "https://docs.rs/rebound-rs"
readme = "README.md"
keywords = ["rebound", "nbody", "astrodynamics", "astronomy"]
categories = ["science", "aerospace::simulation"]
include = [
    "README.md",
    "LICENSE",
    "Cargo.toml",
    "src/**",
    "examples/**",
]

[dependencies]
thiserror = "2"

rebound-bind = "=4.6.0"
