[package]
name = "rebound-bind"
version = "4.6.0"
edition.workspace = true
license.workspace = true
description = "Low-level Rust FFI bindings for the REBOUND N-body simulation C library."
repository = "https://github.com/Cosmic-Stars-Team/rebound-rs"
homepage = "https://github.com/hannorein/rebound"
documentation = "https://docs.rs/rebound-bind"
readme = "README.md"
keywords = ["rebound", "nbody", "astrodynamics", "astronomy"]
categories = ["science", "aerospace::simulation"]
links = "rebound"
include = [
    "README.md",
    "Cargo.toml",
    "build.rs",
    "src/**",
    "rebound/src/**",
    "rebound/LICENSE",
]

[features]
default = []
opengl = []
openmp = []
openmp-clang = ["openmp"]
mpi = []
fftw = []
server = []
avx512 = []
quadrupole = []
profiling = []

[dependencies]

[build-dependencies]
bindgen.workspace = true
cc.workspace = true
