[package]
name = "rebound-rs"
version = "4.6.0-alpha.0"
edition.workspace = true
license.workspace = true
description = "Rust wrapper for the REBOUND N-body simulation library."
repository = "https://github.com/Cosmic-Stars-Team/rebound-rs"
homepage = "https://github.com/Cosmic-Stars-Team/rebound-rs"
documentation = "https://docs.rs/rebound-rs"
readme = "README.md"
keywords = ["rebound", "nbody", "astrodynamics", "astronomy"]
categories = ["science", "aerospace::simulation"]
include = [
    "README.md",
    "Cargo.toml",
    "src/**",
]

[dependencies]
rebound-bind.workspace = true
thiserror.workspace = true
