[package]
name = "rebound-bind"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

[build-dependencies]
bindgen.workspace = true
cc.workspace = true

flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
tempfile = "3"
